// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has optional title 1`] = `
<Widget
  style={Object {}}
>
  <WithTheme(WidgetHeader)
    icon={[Function]}
    subjectPlacement="append"
    title="My title"
  />
  <WidgetBody
    style={
      Object {
        "top": false,
      }
    }
  >
    <styled.div
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <img
        onLoad={null}
        src="http://domain.com/image.png"
        style={
          Object {
            "display": "none",
          }
        }
      />
      <styled.div
        style={
          Object {
            "backgroundColor": undefined,
            "backgroundImage": "url(http://domain.com/image.png)",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
            "opacity": 1,
          }
        }
      />
      <styled.div
        style={
          Object {
            "backgroundColor": undefined,
            "backgroundImage": "url(http://domain.com/image.png)",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
            "opacity": 0,
          }
        }
      />
    </styled.div>
  </WidgetBody>
</Widget>
`;

exports[`matches with snapshot 1`] = `
<Widget
  style={Object {}}
>
  <WidgetBody
    style={
      Object {
        "top": 0,
      }
    }
  >
    <styled.div
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <img
        onLoad={null}
        src="http://domain.com/image.png"
        style={
          Object {
            "display": "none",
          }
        }
      />
      <styled.div
        style={
          Object {
            "backgroundColor": undefined,
            "backgroundImage": "url(http://domain.com/image.png)",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
            "opacity": 1,
          }
        }
      />
      <styled.div
        style={
          Object {
            "backgroundColor": undefined,
            "backgroundImage": "url(http://domain.com/image.png)",
            "backgroundPosition": "center center",
            "backgroundSize": "cover",
            "opacity": 0,
          }
        }
      />
    </styled.div>
  </WidgetBody>
</Widget>
`;
